--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 
 target_sources(cchip8
-        PRIVATE display.cpp)
+        PRIVATE display_window.cpp)
+
+target_include_directories(cchip8 PRIVATE include)
