feat(display): add skeleton for screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ add_executable(cchip8 main.cpp)
 # 3rd party libraries
 add_subdirectory(libs)
 
+# supporting libraries
+add_subdirectory(base)
+
 add_subdirectory(display)
 
 target_link_libraries(cchip8 PRIVATE glfw)
