--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,20 @@ project(cchip8 VERSION 0.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 
-find_package(glfw3 CONFIG REQUIRED)
-find_package(glm CONFIG REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
 
 add_executable(cchip8 main.cpp)
 
 # 3rd party libraries
 add_subdirectory(libs)
+target_link_libraries(cchip8
+        PRIVATE GSL
+        PRIVATE argparse
+        PRIVATE magic_enum)
 
 # supporting libraries
 add_subdirectory(base)
 
 add_subdirectory(display)
 
-target_link_libraries(cchip8 PRIVATE glfw)
-target_link_libraries(cchip8 PRIVATE glm::glm)
+target_link_libraries(cchip8 PRIVATE SDL2::SDL2 SDL2::SDL2main)
