feat(display): fix a linker error concerning sdl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ add_subdirectory(base)
 add_subdirectory(display)
 
 target_link_libraries(cchip8 PRIVATE SDL2::SDL2 SDL2::SDL2main)
+# use custom entry point
+target_compile_definitions(cchip8 PRIVATE -DSDL_MAIN_HANDLED)
