--- a/sound/CMakeLists.txt
+++ b/sound/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 
+target_sources(cchip8
+        PRIVATE beeper.cpp)
+
 target_include_directories(cchip8 PRIVATE include)
